# aria

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
crates/app-core/: Cargo.toml
crates/app-core/src/: lib.rs
crates/artwork/: Cargo.toml
crates/artwork/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: events.rs  lib.rs  library.rs  playback.rs  playlist.rs  settings.rs
crates/platform-audio/: Cargo.toml
crates/platform-audio/src/: lib.rs
crates/playback/: Cargo.toml
crates/playback/src/: exclusive_wasapi.rs  lib.rs  service.rs
crates/playback/src/service/: exclusive_windows.rs
crates/playlists/: Cargo.toml
crates/playlists/src/: lib.rs
crates/search/: Cargo.toml
crates/search/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 0001_initial.sql
crates/storage/src/: database.rs  lib.rs  settings_store.rs
docs/: LIBRARY.md
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: library.rs  mod.rs  playback.rs  playlists.rs  settings.rs  system.rs
src/app/: App.tsx
src/components/: ClearableInput.tsx  EditTrackTagsDialog.tsx  ExportFieldDialog.tsx  SectionCard.tsx  TrackRawTagsDialog.tsx
src/features/albums/: AlbumPane.tsx  HoverScrollText.tsx
src/features/now-playing/: NowPlayingPanel.tsx
src/features/playback/: PlayerBar.tsx
src/features/playlists/: PlaylistImportDialog.tsx  PlaylistPane.tsx  PlaylistPickerDialog.tsx
src/features/queue/: QueuePane.tsx
src/features/settings/: PlaybackSettingsPanel.tsx  SettingsPane.tsx  SettingsPanel.tsx
src/features/tracks/: TrackPane.tsx
src/lib/: aria.ts  field-mapping-presets.ts  runtime.ts
src/types/: aria.ts
