[workspace]
members = [
  "src-tauri",
  "crates/app-core",
  "crates/artwork",
  "crates/domain",
  "crates/library",
  "crates/platform-audio",
  "crates/playback",
  "crates/playlists",
  "crates/search",
  "crates/storage",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
chrono = { version = "0.4", features = ["clock"] }
dirs = "6"
lofty = "0.23"
regex = "1"
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2" }
tauri-build = { version = "2" }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
walkdir = "2"
