[package]
name = "aria-app-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aria-domain = { path = "../domain" }
aria-library = { path = "../library" }
aria-playback = { path = "../playback" }
aria-playlists = { path = "../playlists" }
aria-storage = { path = "../storage" }
thiserror.workspace = true
tokio.workspace = true
