[package]
name = "aria-playback"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aria-domain = { path = "../domain" }
rand = "0.8"
rodio = "0.22"
symphonia = "0.5.5"
thiserror.workspace = true
tokio.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_Media_KernelStreaming",
  "Win32_Media_Multimedia",
  "Win32_System_Com",
  "Win32_System_Threading",
] }
