[package]
name = "aria-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aria-domain = { path = "../domain" }
dirs.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
